--- a/app/src/main/res/layout/products_list_view.xml
+++ b/app/src/main/res/layout/products_list_view.xml
@@ -48,7 +48,8 @@
                     android:layout_height="wrap_content"
                     android:text="Product Name"
                     android:textColor="@color/black"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
 
                 <TextView
                     android:id="@+id/txtShortDescription"
@@ -72,7 +73,7 @@
                 android:layout_marginTop="100dp"
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-                tools:ignore="HardcodedText" />
+                tools:ignore="ContentDescription,HardcodedText" />
 
         </RelativeLayout>
 
@@ -90,7 +91,8 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                tools:ignore="UselessParent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -111,7 +113,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="3dp"
-                        android:layout_marginTop="5dp"
                         android:padding="3dp"
                         android:text="Long Description"
                         tools:ignore="HardcodedText" />
