--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,7 @@
         <item>@font/alatsi</item>
         <item>@font/alfa_slab_one</item>
         <item>@font/anton</item>
+        <item>@font/archivo_black</item>
         <item>@font/asset</item>
         <item>@font/berkshire_swash</item>
         <item>@font/beth_ellen</item>
