--- a/app/src/main/res/layout/activity_manage_account.xml
+++ b/app/src/main/res/layout/activity_manage_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context="com.example.capsule.TempActivity">
+    tools:context="com.example.capsule.ManageAccountActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
