Upding admin profile

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/aclonica</item>
+        <item>@font/aladin</item>
         <item>@font/alatsi</item>
         <item>@font/alfa_slab_one</item>
         <item>@font/anton</item>
@@ -10,5 +11,6 @@
         <item>@font/berkshire_swash</item>
         <item>@font/beth_ellen</item>
         <item>@font/black_han_sans</item>
+        <item>@font/nobile</item>
     </array>
 </resources>
