--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,6 +103,16 @@
                 android:textSize="16sp"
                 tools:ignore="Autofill,HardcodedText,TextFields" />
 
+            <CheckBox
+                android:id="@+id/checkAdmin"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textStyle="italic"
+                android:textSize="15sp"
+                android:text="Login as Admin"
+                tools:ignore="HardcodedText" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -115,7 +125,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="30dp"
                     android:layout_marginHorizontal="30dp"
                     android:backgroundTint="#135667"
                     android:paddingHorizontal="60dp"
