--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,11 +28,12 @@
             android:id="@+id/txtCapsule"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:fontFamily="@font/archivo_black"
             android:text="capsule"
+            android:textAlignment="center"
             android:textAllCaps="true"
+            android:textColor="@color/black"
             android:textSize="40sp"
-            android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
         <TextView
@@ -45,6 +46,7 @@
             android:layout_toEndOf="@+id/txtCapsule"
             android:fontFamily="sans-serif-condensed-medium"
             android:text="Pharmacy"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="italic"
