--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -12,5 +12,6 @@
         <item>@font/beth_ellen</item>
         <item>@font/black_han_sans</item>
         <item>@font/nobile</item>
+        <item>@font/numans</item>
     </array>
 </resources>
