new version 1.4 (update image)

--- a/app/src/main/res/layout-v23/accounts_list_view.xml
+++ b/app/src/main/res/layout-v23/accounts_list_view.xml
@@ -62,6 +62,7 @@
         <ImageButton
             android:id="@+id/ImgBtnMenu"
             android:layout_width="50dp"
+            android:visibility="invisible"
             android:src="@drawable/ic_baseline_menu_24"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
